[FIX] web: `FormView`, solve chatter misalignment issue
Prior of this commit, both the formView's statusbar and chatter's topbar
heights were higher than $o-statusbar-height, invalidating its
use.

Also, since both elements' natural height is computed depending by
buttons and borders, the resulting values were always inconsistent
between the two.

This commit sets an higher min-height, solving rendering discrepancies
when formView and chatter are rendered side-by-side.

Commit preparatory to the introduction of dark-mode.

task-2710677

--- a/addons/web/static/src/scss/primary_variables.scss
+++ b/addons/web/static/src/scss/primary_variables.scss
@@ -127,7 +127,7 @@ $o-sheet-cancel-tpadding: 0px !default;
 
 $o-avatar-size: 90px !default;
 
-$o-statusbar-height: 33px !default;
+$o-statusbar-height: 35px !default;
 
 $o-label-font-size-factor: 0.8 !default;
 
